fix: update email validation logic and improve layout spacing in signup form

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -72,7 +72,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 21px;
+  gap: 28px;
 }
 
 .signup__form>.signup__input,
@@ -124,12 +124,13 @@ main {
   left: 0;
   width: 100%;
   color: #ff8190;
-  font-size: 13px;
+  font-size: 16px;
   margin-top: 0;
 }
 
 .signup__error--text.show {
   display: block;
+  padding-left: 12px;
 }
 
 .signup__input--error {
